# guitar

./: .gitignore  .tool-versions  CLAUDE.md  PYCHARM_SETUP.md  README.md  WEB_QUICKSTART.md  api.py  demo.py  main.py  package-lock.json  pyproject.toml  test_all_option.py  test_c_major_positions.py  test_g_major_positions.py  test_integration_c_g_major.py  test_position_preference.py  test_position_selection_bug.py  test_triad_validation.py  test_triads.py  test_ui.py  test_xyz_patterns.py  tsconfig.json
__tests__/: fretboard-rendering.test.ts  note-colors.test.ts  position-note-sharing.test.ts  sound.test.ts
app/: page.tsx
components/: MajorTriads.tsx  ScalePractice.tsx
lib/guitar/: core.ts  fretboard-dimensions.ts  note-colors.ts  types.ts
web/: .gitignore  README.md  package.json
web/__tests__/: fretboard-physics.test.ts  guitar-logic.test.ts  hover-interaction.test.ts  position-note-sharing.test.ts  triads.test.ts
web/app/: layout.tsx  page.tsx
web/components/: FretboardDiagram.tsx  LongFretboardDiagram.tsx  MajorTriads.tsx  ScalePractice.tsx  Tabs.tsx
web/lib/guitar/: constants.ts  fretboard-physics.ts  index.ts  sound.ts  triads.ts
