[project]
name = "guitar-scale-practice"
version = "0.1.0"
description = "Guitar Scale Practice App - 3NPS XYZ Pattern Tool"
authors = [{name = "Guitar Practice"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
guitar = "main:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = [
    ".",
]
python_files = [
    "test_*.py",
    "*_test.py",
]