[tool.poetry]
name = "guitar-scale-practice"
version = "0.1.0"
description = "Guitar Scale Practice App - 3NPS XYZ Pattern Tool"
authors = ["Guitar Practice"]
readme = "README.md"
packages = [{include = "*.py"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[tool.poetry.scripts]
guitar = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    ".",
]
python_files = [
    "test_*.py",
    "*_test.py",
]